[tool.poetry]
name = "buildsite-backend"
version = "0.1.0"
description = "Backend for Minecraft build-sharing site featuring a 3D viewer and layer-by-layer steps"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
